--- a/gentelella/production/ketua/mengelolaImam.html
+++ b/gentelella/production/ketua/mengelolaImam.html
@@ -119,7 +119,7 @@
           <div class="">
             <div class="page-title">
               <div class="title_left">
-                <h3>Mengelola Pengurus Masjid</h3>
+                <h3>Mengelola Imam Masjid</h3>
               </div>
 
               <div class="title_right">
@@ -140,7 +140,7 @@
               <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2><i class="fa fa-bars"></i> Data Pengurus Masjid</h2>
+                    <h2><i class="fa fa-bars"></i> Data Imam Masjid</h2>
                     <div class="clearfix"></div>
                   </div>
                   <div class="x_content">
@@ -148,15 +148,15 @@
 
                     <div class="" role="tabpanel" data-example-id="togglable-tabs">
                       <ul id="myTab" class="nav nav-tabs bar_tabs" role="tablist">
-                        <li role="presentation" class="active"><a href="#tambahPengurus" id="home-tab" role="tab" data-toggle="tab" aria-expanded="true">Tambah</a>
+                        <li role="presentation" class="active"><a href="#tambahImamMasjid" id="home-tab" role="tab" data-toggle="tab" aria-expanded="true">Tambah</a>
                         </li>
-                        <li role="presentation" class=""><a href="#editPengurus" role="tab" id="profile-tab" data-toggle="tab" aria-expanded="false">Edit</a>
+                        <li role="presentation" class=""><a href="#editImamMasjid" role="tab" id="profile-tab" data-toggle="tab" aria-expanded="false">Edit</a>
                         </li>
-                        <li role="presentation" class=""><a href="#hapusPengurus" role="tab" id="profile-tab2" data-toggle="tab" aria-expanded="false">Delete</a>
+                        <li role="presentation" class=""><a href="#hapusImamMasjid" role="tab" id="profile-tab2" data-toggle="tab" aria-expanded="false">Delete</a>
                         </li>
                       </ul>
                       <div id="myTabContent" class="tab-content">
-                        <div role="tabpanel" class="tab-pane fade active in" id="tambahPengurus" aria-labelledby="home-tab">
+                        <div role="tabpanel" class="tab-pane fade active in" id="tambahImamMasjid" aria-labelledby="home-tab">
                           <form id="demo-form2" data-parsley-validate class="form-horizontal form-label-left">
                             <div class="form-group">
                               <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">First Name <span class="required">*</span>
@@ -208,7 +208,7 @@
 
                           </form>
                         </div>
-                        <div role="tabpanel" class="tab-pane fade" id="editPengurus" aria-labelledby="profile-tab">
+                        <div role="tabpanel" class="tab-pane fade" id="editImamMasjid" aria-labelledby="profile-tab">
                           <table id="datatableEdit" class="table table-striped table-bordered">
                             <thead>
                               <tr>
@@ -221,6 +221,8 @@
                                 <th>Action</th>
                               </tr>
                             </thead>
+
+
                             <tbody>
                               <tr id="data1">
                                 <td>Tiger Nixon</td>
@@ -229,13 +231,13 @@
                                 <td>61</td>
                                 <td>2011/04/25</td>
                                 <td>$320,800</td>
-                                <td><a href="updatePengurusMasjid.html"><button class="btn btn-info btn-sm" type="">Edit</button></a></td>
+                                <td><a href="updateImamMasjid.html"><button class="btn btn-info btn-sm" type="">Edit</button></a></td>
                               </tr>
                               
                             </tbody>
                           </table>
                         </div>
-                        <div role="tabpanel" class="tab-pane fade" id="hapusPengurus" aria-labelledby="profile-tab">
+                        <div role="tabpanel" class="tab-pane fade" id="hapusImamMasjid" aria-labelledby="profile-tab">
                           <table id="datatableDelete" class="table table-striped table-bordered">
                             <thead>
                               <tr>
