--- a/gentelella/production/ketua/donaturTakjil.html
+++ b/gentelella/production/ketua/donaturTakjil.html
@@ -113,10 +113,10 @@
         <div class="right_col" role="main">
           <!-- top tiles -->
           <div class="row">
-            <div class="col-md-8 col-sm-8 col-xs-8">
+            <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>Laporan Zakat</h2>
+                    <h2>Donatur Takjil</h2>
                     <ul class="nav navbar-right panel_toolbox">
                       <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                       </li>
@@ -127,99 +127,31 @@
                   </div>
                   <div class="x_content">
                     <br />
-                    <form class="form-horizontal form-label-left">
-
-                      <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Tahun Zakat <span class="required">*</span>
-                        </label>
-                        <div class="col-md-8 col-sm-8 col-xs-8">
-                         <!--  <input type="text" id="first-name" required="required" class="form-control col-md-7 col-xs-12"> -->
-                         <select class="form-control col-md-7 col-xs-12" name="zakatYear" id="zakatYear">
-                           <option value="">Pilih tahun</option>
-                           <option value="2016">2016</option>
-                           <option value="2015">2015</option>
-                           <option value="2014">2014</option>
-                           <option value="2013">2013</option>
-                           <option value="2012">2012</option>
-                         </select>
-                        </div>
-                      </div>
-                    </form>
+                    <table id="datatableDonaturTakjil" class="table table-striped table-bordered">
+                        <thead>
+                          <tr>
+                            <th>Name</th>
+                            <th>Position</th>
+                            <th>Office</th>
+                            <th>Age</th>
+                            <th>Start date</th>
+                            <th>Salary</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr id="data1">
+                            <td>Tiger Nixon</td>
+                            <td>System Architect</td>
+                            <td>Edinburgh</td>
+                            <td>61</td>
+                            <td>2011/04/25</td>
+                            <td>$320,800</td>
+                          </tr>
+                        </tbody>
+                      </table>
                   </div>
                 </div>
               </div>
-              <div class="col-sm-12" id="laporanZakat" style="display: none">
-                <div class="x_panel">
-                  <div class="x_title">
-                    <h2>Laporan Zakat Tahun&nbsp;<h2 id="zakatYearValue"></h2></h2>
-                    <div class="clearfix"></div>
-                  </div>
-                  <div class="x_content">
-                    <br />
-                    <div>
-                      <h4 style="font-weight: bold">A. Total Penerimaan Zakat : </h4>
-                      <h4 id="totalBeras" style="text-indent: 50px">Total Beras : 100 Kg</h4>
-                      <h4 id="totalUang"style="text-indent: 50px">Total Uang : Rp. 25.000.000</h4>
-                    </div>
-                    <div class="clearfix"></div>
-                    <div>
-                      <h4 style="font-weight: bold">B. Pemberi Zakat : </h4>
-                      <div class="clearfix"></div>
-                      <br>
-                      <table id="datatablePemberiZakat" class="table table-striped table-bordered">
-                            <thead>
-                              <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr id="data1">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
-                              </tr>
-                            </tbody>
-                          </table>
-                    </div>
-                    <div class="clearfix"></div>
-                    <div>
-                      <h4 style="font-weight: bold">C. Penerima Zakat : </h4>
-                      <div class="clearfix"></div>
-                      <br>
-                      <table id="datatablePenerimaZakat" class="table table-striped table-bordered">
-                            <thead>
-                              <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr id="data1">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
-                              </tr>
-                            </tbody>
-                          </table>
-                    </div> 
-                  </div> 
-                  </div>
-                </div>
               </div>
           </div>
         </div>
@@ -278,17 +210,17 @@
     <script>
       $(document).ready(function() {
         $('#sidebar-menu').load('sidebar-ketua.html');
-        $('#datatablePemberiZakat').dataTable({"searching": false,"bLengthChange": false});
-        $('#datatablePenerimaZakat').dataTable({"searching": false,"bLengthChange": false});
+        $('#datatableDonaturTakjil').dataTable();
+        //$('#datatablePenerimaQurban').dataTable({"searching": false,"bLengthChange": false});
         
       });
 
-      $(document).on('change','#zakatYear', function(){
-        var zakatYear = $(this).val();
-        if(!zakatYear) $('#laporanZakat').css('display','none');
+      $(document).on('change','#qurbanYear', function(){
+        var qurbanYear = $(this).val();
+        if(!qurbanYear) $('#laporanQurban').css('display','none');
         else {
-          $('#laporanZakat').css('display','inline-block');
-        $('#zakatYearValue').html(zakatYear);
+          $('#laporanQurban').css('display','inline-block');
+        $('#qurbanYearValue').html(qurbanYear);
         }
       })
     </script>
