--- a/gentelella/production/ketua/laporanRekapKeuangan.html
+++ b/gentelella/production/ketua/laporanRekapKeuangan.html
@@ -116,7 +116,7 @@
             <div class="col-md-8 col-sm-8 col-xs-8">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>Laporan Zakat</h2>
+                    <h2>Laporan Rekapitulasi Keuangan</h2>
                     <ul class="nav navbar-right panel_toolbox">
                       <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                       </li>
@@ -130,93 +130,113 @@
                     <form class="form-horizontal form-label-left">
 
                       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Tahun Zakat <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name"> Bulan dan Tahun<span class="required">*</span>
                         </label>
                         <div class="col-md-8 col-sm-8 col-xs-8">
                          <!--  <input type="text" id="first-name" required="required" class="form-control col-md-7 col-xs-12"> -->
-                         <select class="form-control col-md-7 col-xs-12" name="zakatYear" id="zakatYear">
-                           <option value="">Pilih tahun</option>
-                           <option value="2016">2016</option>
-                           <option value="2015">2015</option>
-                           <option value="2014">2014</option>
-                           <option value="2013">2013</option>
-                           <option value="2012">2012</option>
-                         </select>
+                         <input type="month" id="recapDate" placeholder="Bulan dan Tahun laporan">
                         </div>
                       </div>
                     </form>
                   </div>
                 </div>
               </div>
-              <div class="col-sm-12" id="laporanZakat" style="display: none">
+              <div class="col-sm-12" id="laporanRecapKeuangan" style="display: none">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>Laporan Zakat Tahun&nbsp;<h2 id="zakatYearValue"></h2></h2>
+                    <h2>Laporan Rekapitulasi Keuangan Bulan&nbsp;<h2 id="recapMonth"></h2></h2>
                     <div class="clearfix"></div>
                   </div>
                   <div class="x_content">
                     <br />
                     <div>
-                      <h4 style="font-weight: bold">A. Total Penerimaan Zakat : </h4>
-                      <h4 id="totalBeras" style="text-indent: 50px">Total Beras : 100 Kg</h4>
-                      <h4 id="totalUang"style="text-indent: 50px">Total Uang : Rp. 25.000.000</h4>
-                    </div>
-                    <div class="clearfix"></div>
-                    <div>
-                      <h4 style="font-weight: bold">B. Pemberi Zakat : </h4>
+                      <h4 style="font-weight: bold">A. Pemasukan : </h4>
                       <div class="clearfix"></div>
                       <br>
-                      <table id="datatablePemberiZakat" class="table table-striped table-bordered">
-                            <thead>
-                              <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr id="data1">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
-                              </tr>
-                            </tbody>
-                          </table>
+                      <table id="datatablePengeluaran" class="table table-striped table-bordered">
+                        <thead>
+                          <tr>
+                            <th>Name</th>
+                            <th>Position</th>
+                            <th>Office</th>
+                            <th>Age</th>
+                            <th>Start date</th>
+                            <th>Salary</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr id="data1">
+                            <td>Tiger Nixon</td>
+                            <td>System Architect</td>
+                            <td>Edinburgh</td>
+                            <td>61</td>
+                            <td>2011/04/25</td>
+                            <td>$320,800</td>
+                          </tr>
+                          <tr>
+                            <td colspan="5">Total</td>
+                            <td>$320,800</td>
+                          </tr>
+                        </tbody>
+                      </table>
                     </div>
-                    <div class="clearfix"></div>
+                    <!-- <div class="clearfix"></div> -->
+                    <br>
                     <div>
-                      <h4 style="font-weight: bold">C. Penerima Zakat : </h4>
+                      <h4 style="font-weight: bold">B. Pengeluaran : </h4>
                       <div class="clearfix"></div>
                       <br>
-                      <table id="datatablePenerimaZakat" class="table table-striped table-bordered">
-                            <thead>
-                              <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr id="data1">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
-                              </tr>
-                            </tbody>
-                          </table>
-                    </div> 
+                      <table id="datatablePemasukan" class="table table-striped table-bordered">
+                        <thead>
+                          <tr>
+                            <th>Name</th>
+                            <th>Position</th>
+                            <th>Office</th>
+                            <th>Age</th>
+                            <th>Start date</th>
+                            <th>Salary</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr id="data1">
+                            <td>Tiger Nixon</td>
+                            <td>System Architect</td>
+                            <td>Edinburgh</td>
+                            <td>61</td>
+                            <td>2011/04/25</td>
+                            <td>$320,800</td>
+                          </tr>
+                          <tr>
+                            <td colspan="5">Total</td>
+                            <td>$320,800</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                    <br>
+                    <div>
+                      <h4 style="font-weight: bold">C. Saldo : </h4>
+                      <div class="clearfix"></div>
+                      <br>
+                      <table style="text-indent: 50px">
+                        <tr>
+                          <td style="font-size: 16px" colspan="" rowspan="" headers="">Pengeluaran</td>
+                          <td style="font-size: 16px" colspan="" rowspan="" headers="">&nbsp;:&nbsp;</td>
+                          <td style="font-size: 16px" colspan="" rowspan="" headers="">Rp. 5.000.000</td>
+                        </tr>
+                        <tr>
+                          <td style="font-size: 16px" colspan="" rowspan="" headers="">Pemasukkan</td>
+                          <td style="font-size: 16px" colspan="" rowspan="" headers="">&nbsp;:&nbsp;</td>
+                          <td style="font-size: 16px" colspan="" rowspan="" headers="">Rp. 15.000.000</td>
+                        </tr>
+                         <tr>
+                          <td style="font-size: 16px; border-top: 1px solid; font-weight: bold" colspan="" rowspan="" headers="">Kas</td>
+                          <td style="font-size: 16px; border-top: 1px solid; font-weight: bold" colspan="" rowspan="" headers="">&nbsp;:&nbsp;</td>
+                          <td style="font-size: 16px; border-top: 1px solid; font-weight: bold" colspan="" rowspan="" headers="">Rp. 10.000.000</td>
+                        </tr>
+                      </table>
+                      <div class="clearfix"></div>
+                    </div>  
                   </div> 
                   </div>
                 </div>
@@ -278,18 +298,27 @@
     <script>
       $(document).ready(function() {
         $('#sidebar-menu').load('sidebar-ketua.html');
-        $('#datatablePemberiZakat').dataTable({"searching": false,"bLengthChange": false});
-        $('#datatablePenerimaZakat').dataTable({"searching": false,"bLengthChange": false});
+        $('#datatablePemasukan').dataTable({"searching": false,"bLengthChange": false});
+        $('#datatablePengeluaran').dataTable({"searching": false,"bLengthChange": false});
         
       });
 
-      $(document).on('change','#zakatYear', function(){
-        var zakatYear = $(this).val();
-        if(!zakatYear) $('#laporanZakat').css('display','none');
-        else {
-          $('#laporanZakat').css('display','inline-block');
-        $('#zakatYearValue').html(zakatYear);
+      $(document).on('change','#recapDate', function(){
+        var date = $(this).val();
+        //console.log(date.split('-'));
+        var month = date.split('-')[1];
+        var year = date.split('-')[0];
+
+        var months = ['Januari', 'Februari', 'Maret', 'April', 'Mei', 'Juni', 'Juli', 'Agustus', 'September','Oktober','November', 'Desember'];
+
+        if(year!=''&&month!='')
+        {
+          $('#laporanRecapKeuangan').css('display','inline-block');
+          //console.log(months[month-1]);
+          $('#recapMonth').html(months[month-1]+' Tahun '+year);
         }
+        else
+          $('#laporanRecapKeuangan').css('display','none');
       })
     </script>
   </body>
