--- a/gentelella/production/ketua/sidebar-ketua.html
+++ b/gentelella/production/ketua/sidebar-ketua.html
@@ -2,11 +2,11 @@
                 <h3>Ketua</h3>
                 <ul class="nav side-menu">
                   <li><a href="mengelolaPengurus.html"><i class="fa fa-sitemap"></i> Pengurus Masjid</a>
-                  <li><a><i class="fa fa-user"></i> Data Imam</a>
-                  <li><a><i class="fa fa-cutlery"></i> Donatur Takjil</a>
-                  <li><a><i class="fa fa-money"></i> Rekap Keuangan</a>
-                  <li><a><i class="fa fa-wrench"></i> Inventaris</a>
+                  <li><a href="mengelolaImam.html"><i class="fa fa-user"></i> Data Imam</a>
+                  <li><a href="donaturTakjil.html"><i class="fa fa-cutlery"></i> Donatur Takjil</a>
+                  <li><a href="laporanRekapKeuangan.html" ><i class="fa fa-money"></i> Rekap Keuangan</a>
+                  <li><a href="laporanInventaris.html"><i class="fa fa-wrench"></i> Inventaris</a>
                   <li><a href="laporanZakat.html"><i class="fa fa-life-ring"></i> Laporan Zakat</a>
-                  <li><a><i class="fa fa-paw"></i> Laporan Qurban</a>
+                  <li><a href="laporanQurban.html"><i class="fa fa-paw"></i> Laporan Qurban</a>
                   </li>
               </div>
