--- a/gentelella/production/ketua/updateImamMasjid.html
+++ b/gentelella/production/ketua/updateImamMasjid.html
@@ -113,10 +113,10 @@
         <div class="right_col" role="main">
           <!-- top tiles -->
           <div class="row">
-            <div class="col-md-8 col-sm-8 col-xs-8">
+            <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>Laporan Zakat</h2>
+                    <h2>Update Imam Masjid, Muhammad Imam</h2>
                     <ul class="nav navbar-right panel_toolbox">
                       <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                       </li>
@@ -127,99 +127,59 @@
                   </div>
                   <div class="x_content">
                     <br />
-                    <form class="form-horizontal form-label-left">
-
-                      <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Tahun Zakat <span class="required">*</span>
-                        </label>
-                        <div class="col-md-8 col-sm-8 col-xs-8">
-                         <!--  <input type="text" id="first-name" required="required" class="form-control col-md-7 col-xs-12"> -->
-                         <select class="form-control col-md-7 col-xs-12" name="zakatYear" id="zakatYear">
-                           <option value="">Pilih tahun</option>
-                           <option value="2016">2016</option>
-                           <option value="2015">2015</option>
-                           <option value="2014">2014</option>
-                           <option value="2013">2013</option>
-                           <option value="2012">2012</option>
-                         </select>
+                    <form id="demo-form2" data-parsley-validate class="form-horizontal form-label-left">
+                        <div class="form-group">
+                          <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">First Name <span class="required">*</span>
+                          </label>
+                          <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input type="text" id="first-name" required="required" class="form-control col-md-7 col-xs-12">
+                          </div>
                         </div>
-                      </div>
-                    </form>
+                        <div class="form-group">
+                          <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Last Name <span class="required">*</span>
+                          </label>
+                          <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input type="text" id="last-name" name="last-name" required="required" class="form-control col-md-7 col-xs-12">
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Middle Name / Initial</label>
+                          <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name">
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="control-label col-md-3 col-sm-3 col-xs-12">Gender</label>
+                          <div class="col-md-6 col-sm-6 col-xs-12">
+                            <div id="gender" class="btn-group" data-toggle="buttons">
+                              <label class="btn btn-default" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
+                                <input type="radio" name="gender" value="male"> &nbsp; Male &nbsp;
+                              </label>
+                              <label class="btn btn-primary" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
+                                <input type="radio" name="gender" value="female"> Female
+                              </label>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="control-label col-md-3 col-sm-3 col-xs-12">Date Of Birth <span class="required">*</span>
+                          </label>
+                          <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" required="required" type="text">
+                          </div>
+                        </div>
+                        <div class="ln_solid"></div>
+                        <div class="form-group">
+                          <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
+                            <button type="submit" class="btn btn-primary">Cancel</button>
+                            <button type="submit" class="btn btn-success">Submit</button>
+                          </div>
+                        </div>
+
+                      </form>
                   </div>
                 </div>
               </div>
-              <div class="col-sm-12" id="laporanZakat" style="display: none">
-                <div class="x_panel">
-                  <div class="x_title">
-                    <h2>Laporan Zakat Tahun&nbsp;<h2 id="zakatYearValue"></h2></h2>
-                    <div class="clearfix"></div>
-                  </div>
-                  <div class="x_content">
-                    <br />
-                    <div>
-                      <h4 style="font-weight: bold">A. Total Penerimaan Zakat : </h4>
-                      <h4 id="totalBeras" style="text-indent: 50px">Total Beras : 100 Kg</h4>
-                      <h4 id="totalUang"style="text-indent: 50px">Total Uang : Rp. 25.000.000</h4>
-                    </div>
-                    <div class="clearfix"></div>
-                    <div>
-                      <h4 style="font-weight: bold">B. Pemberi Zakat : </h4>
-                      <div class="clearfix"></div>
-                      <br>
-                      <table id="datatablePemberiZakat" class="table table-striped table-bordered">
-                            <thead>
-                              <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr id="data1">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
-                              </tr>
-                            </tbody>
-                          </table>
-                    </div>
-                    <div class="clearfix"></div>
-                    <div>
-                      <h4 style="font-weight: bold">C. Penerima Zakat : </h4>
-                      <div class="clearfix"></div>
-                      <br>
-                      <table id="datatablePenerimaZakat" class="table table-striped table-bordered">
-                            <thead>
-                              <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr id="data1">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
-                              </tr>
-                            </tbody>
-                          </table>
-                    </div> 
-                  </div> 
-                  </div>
-                </div>
               </div>
           </div>
         </div>
@@ -278,17 +238,17 @@
     <script>
       $(document).ready(function() {
         $('#sidebar-menu').load('sidebar-ketua.html');
-        $('#datatablePemberiZakat').dataTable({"searching": false,"bLengthChange": false});
-        $('#datatablePenerimaZakat').dataTable({"searching": false,"bLengthChange": false});
+        $('#datatablePemberiQurban').dataTable({"searching": false,"bLengthChange": false});
+        $('#datatablePenerimaQurban').dataTable({"searching": false,"bLengthChange": false});
         
       });
 
-      $(document).on('change','#zakatYear', function(){
-        var zakatYear = $(this).val();
-        if(!zakatYear) $('#laporanZakat').css('display','none');
+      $(document).on('change','#qurbanYear', function(){
+        var qurbanYear = $(this).val();
+        if(!qurbanYear) $('#laporanQurban').css('display','none');
         else {
-          $('#laporanZakat').css('display','inline-block');
-        $('#zakatYearValue').html(zakatYear);
+          $('#laporanQurban').css('display','inline-block');
+        $('#qurbanYearValue').html(qurbanYear);
         }
       })
     </script>
