--- a/gentelella/production/sekretaris/sidebar-sekretaris.html
+++ b/gentelella/production/sekretaris/sidebar-sekretaris.html
@@ -1,12 +1,13 @@
 <div class="menu_section">
                 <h3>Sekretaris</h3>
                 <ul class="nav side-menu">
-                  <li><a href="mengelolaPengurus.html"><i class="fa fa-sitemap"></i> Pengurus Masjid</a>
-                  <li><a href="mengelolaImam.html"><i class="fa fa-user"></i> Data Imam</a>
-                  <li><a href="donaturTakjil.html"><i class="fa fa-cutlery"></i> Donatur Takjil</a>
-                  <li><a href="laporanRekapKeuangan.html" ><i class="fa fa-money"></i> Rekap Keuangan</a>
-                  <li><a href="laporanInventaris.html"><i class="fa fa-wrench"></i> Inventaris</a>
-                  <li><a href="laporanZakat.html"><i class="fa fa-life-ring"></i> Laporan Zakat</a>
-                  <li><a href="laporanQurban.html"><i class="fa fa-paw"></i> Laporan Qurban</a>
+                  <li><a href="donaturTakjil.html"><i class="fa fa-cutlery"></i>Donatur Takjil</a></li>
+                  <li><a href="mengelolaPengumuman.html"><i class="fa fa-info"></i>Mengelola Pengumuman</a>
+                  <li><a href="mengelolaPenerimaZakat.html"><i class="fa fa-group"></i>Mengelola Penerima Zakat</a>
+                  <li><a href="mengelolaPemberiZakat.html"><i class="fa fa-user"></i>Mengelola Pemberi Zakat</a>
+                  <li><a href="mengelolaPenerimaQurban.html" ><i class="fa fa-group"></i>Mengelola Penerima Qurban</a>
+                  <li><a href="mengelolaPemberiQurban.html"><i class="fa fa-user"></i>Mengelola Pemberi Qurban</a>
+                  <li><a href="mengelolaInventaris.html"><i class="fa fa-wrench"></i>Mengelola Inventaris</a>
+                  <li><a href="mengelolaJadwalPengajian.html"><i class="fa fa-calendar"></i>Mengelola Jadwal Pengajian</a>
                   </li>
               </div>
