--- a/gentelella/production/home/index.html
+++ b/gentelella/production/home/index.html
@@ -66,17 +66,14 @@
                <div class="">
                   <div class="col-sm-12">
                      <div class="col-sm-12" style="background-color:white; padding: 1.5em; margin-bottom:1em; height: 100vh">
-                        <a style="color:rgba(0,0,0,0.8)" href="post.php">
-                           <h3><b>Pengumuman</b></h3>
-                        </a>
-                        <p> 3 Januari 2016 </p>
-                        <br>
-                        
-                        <div class="col-sm-9">
+                        <div class="col-sm-6">
+                          <img src="../images/masjid.jpg" alt="">
+                        </div>
+                        <div class="col-sm-6">
+                          <h1>Masjid Baitul Muttaqin</h1>
                            <p>
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id viverra dolor, a cursus metus. Suspendisse non nibh eu dolor rutrum rutrum. Morbi quis consectetur sem. Nulla sed nunc at ante imperdiet dignissim. Quisque viverra imperdiet consequat. Curabitur et dolor cursus diam elementum fringilla. Vestibulum ante... <a href="post.php"><b>Read more</b></a>
+                              Address: Jalan Nomer 25, Jl. Keputih Gg. III No.23, Kota SBY, Jawa Timur 60111. Phone: (031) 5931318.
                            </p>
-                           <!-- <p><b>Tags:</b> <span class="badge">Tagnya</span> <span class="badge">Disini</span> <span class="badge">Mas</span></p> -->
                         </div>
                      </div>
                      
