--- a/gentelella/production/home/lihatKeuanganMasjid.html
+++ b/gentelella/production/home/lihatKeuanganMasjid.html
@@ -47,6 +47,7 @@
                   <li><a class="nav-menu" style="color: #515356" href="jadwalPengajian.html">JADWAL PENGAJIAN</a></li>
                   <li><a class="nav-menu" style="color: #515356" href="lihatKeuanganMasjid.html">INFAQ</a></li>
                   <li><a class="nav-menu" style="color: #515356" href="daftarDonatur.html">DAFTAR DONATUR TAKJIL</a></li>
+                  <li><a class="nav-menu" style="color: #515356" href="pengumuman.html">PENGUMUMAN</a></li>
                </ul>
             </div>
          </div>
@@ -100,22 +101,14 @@
                           <table id="datatableKeuanganMasjid" class="table table-striped table-bordered">
                           <thead>
                             <tr>
-                              <th>Name</th>
-                              <th>Position</th>
-                              <th>Office</th>
-                              <th>Age</th>
-                              <th>Start date</th>
-                              <th>Salary</th>
+                              <th>Tanggal</th>
+                              <th>Pemasukan Infaq</th>
                             </tr>
                           </thead>
                           <tbody>
                             <tr id="data1">
-                              <td>Tiger Nixon</td>
-                              <td>System Architect</td>
-                              <td>Edinburgh</td>
-                              <td>61</td>
-                              <td>2011/04/25</td>
-                              <td>$320,800</td>
+                              <td>25 November 2016</td>
+                              <td>Rp. 210.000</td>
                             </tr>
                           </tbody>
                         </table>
