--- a/gentelella/production/bendahara/donaturTakjil.html
+++ b/gentelella/production/bendahara/donaturTakjil.html
@@ -53,8 +53,8 @@
                 <img src="../images/img.jpg" alt="..." class="img-circle profile_img">
               </div>
               <div class="profile_info">
-                <span>Welcome,</span>
-                <h2>John Doe</h2>
+                <span>Selamat Datang,</span>
+                <h2>Bapak Hadi</h2>
               </div>
             </div>
             <!-- /menu profile quick info -->
@@ -96,11 +96,11 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="../images/img.jpg" alt="">John Doe
+                    <img src="../images/img.jpg" alt="">Bapak Hadi
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
-                    <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                    <li><a href="../login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                   </ul>
                 </li>
               </ul>
@@ -130,22 +130,20 @@
                     <table id="datatableDonaturTakjil" class="table table-striped table-bordered">
                         <thead>
                           <tr>
-                            <th>Name</th>
-                            <th>Position</th>
-                            <th>Office</th>
-                            <th>Age</th>
-                            <th>Start date</th>
-                            <th>Salary</th>
+                            <th>Tanggal Donasi</th>
+                            <th>Nama</th>
+                            <th>No Telp</th>
+                            <th>Alamat</th>
+                            <th>Keterangan Donasi</th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr id="data1">
-                            <td>Tiger Nixon</td>
-                            <td>System Architect</td>
-                            <td>Edinburgh</td>
-                            <td>61</td>
-                            <td>2011/04/25</td>
-                            <td>$320,800</td>
+                            <td>30 November 2016</td>
+                            <td>Afif</td>
+                            <td>087289001927</td>
+                            <td>Jalan Keputih Gg. II/19</td>
+                            <td>100 gorengan</td>
                           </tr>
                         </tbody>
                       </table>
