--- a/gentelella/production/home/daftarDonatur.html
+++ b/gentelella/production/home/daftarDonatur.html
@@ -47,6 +47,7 @@
                   <li><a class="nav-menu" style="color: #515356" href="jadwalPengajian.html">JADWAL PENGAJIAN</a></li>
                   <li><a class="nav-menu" style="color: #515356" href="lihatKeuanganMasjid.html">INFAQ</a></li>
                   <li><a class="nav-menu" style="color: #515356" href="daftarDonatur.html">DAFTAR DONATUR TAKJIL</a></li>
+                  <li><a class="nav-menu" style="color: #515356" href="pengumuman.html">PENGUMUMAN</a></li>
                </ul>
             </div>
          </div>
@@ -131,40 +132,27 @@
                         <div class="col-sm-12">
                           <form id="formDonatur" class="form-horizontal form-label-left">
                             <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">First Name <span class="required">*</span>
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Nama <span class="required">*</span>
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <input type="text" id="first-name" required="required" class="form-control col-md-7 col-xs-12">
                               </div>
                             </div>
                             <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Last Name <span class="required">*</span>
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">No Telp <span class="required">*</span>
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <input type="text" id="last-name" name="last-name" required="required" class="form-control col-md-7 col-xs-12">
                               </div>
                             </div>
                             <div class="form-group">
-                              <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Middle Name / Initial</label>
+                              <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Alamat </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name">
                               </div>
                             </div>
                             <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Gender</label>
-                              <div class="col-md-6 col-sm-6 col-xs-12">
-                                <div id="gender" class="btn-group" data-toggle="buttons">
-                                  <label class="btn btn-default" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                                    <input type="radio" name="gender" value="male"> &nbsp; Male &nbsp;
-                                  </label>
-                                  <label class="btn btn-primary" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                                    <input type="radio" name="gender" value="female"> Female
-                                  </label>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Date Of Birth <span class="required">*</span>
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Keterangan Donasi <span class="required">*</span>
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" required="required" type="text">
