--- a/gentelella/production/home/jadwalImam.html
+++ b/gentelella/production/home/jadwalImam.html
@@ -47,6 +47,7 @@
                   <li><a class="nav-menu" style="color: #515356" href="jadwalPengajian.html">JADWAL PENGAJIAN</a></li>
                   <li><a class="nav-menu" style="color: #515356" href="lihatKeuanganMasjid.html">INFAQ</a></li>
                   <li><a class="nav-menu" style="color: #515356" href="daftarDonatur.html">DAFTAR DONATUR TAKJIL</a></li>
+                  <li><a class="nav-menu" style="color: #515356" href="pengumuman.html">PENGUMUMAN</a></li>
                </ul>
             </div>
          </div>
@@ -89,7 +90,7 @@
 
                   <div class="col-sm-12" >
                      <div class="col-sm-12" id="showJadwalImam" style="display: none;background-color:white; padding: 1.5em; margin-bottom:1em">
-                        <a style="color:rgba(0,0,0,0.8)" href="post.php">
+                        <a style="color:rgba(0,0,0,0.8)">
                            <h3><b>Jadwal Imam Bulan </b><b id="monthSelect"></b></h3>
                         </a>
                         
@@ -100,22 +101,26 @@
                           <table id="datatableJadwalImam" class="table table-striped table-bordered">
                           <thead>
                             <tr>
-                              <th>Name</th>
-                              <th>Position</th>
-                              <th>Office</th>
-                              <th>Age</th>
-                              <th>Start date</th>
-                              <th>Salary</th>
+                              <th>Tanggal</th>
+                              <th>Waktu</th>
+                              <th>Acara</th>
+                              <th>Imam</th>
                             </tr>
                           </thead>
                           <tbody>
                             <tr id="data1">
-                              <td>Tiger Nixon</td>
-                              <td>System Architect</td>
-                              <td>Edinburgh</td>
-                              <td>61</td>
-                              <td>2011/04/25</td>
-                              <td>$320,800</td>
+                              <td>28 November 2016</td>
+                              <td>17.42</td>                            
+                              <td>Sholat Magrib</td>
+                              <td>M. Hanif</td>
+                            </tr>
+                          </tbody>
+                          <tbody>
+                            <tr id="data2">
+                              <td>29 November 2016</td>                            
+                              <td>11.27</td>
+                              <td>Sholat Dzuhur</td>
+                              <td>Hamrizal</td>
                             </tr>
                           </tbody>
                         </table>
