--- a/gentelella/production/home/jadwalPengajian.html
+++ b/gentelella/production/home/jadwalPengajian.html
@@ -47,6 +47,7 @@
                   <li><a class="nav-menu" style="color: #515356" href="jadwalPengajian.html">JADWAL PENGAJIAN</a></li>
                   <li><a class="nav-menu" style="color: #515356" href="lihatKeuanganMasjid.html">INFAQ</a></li>
                   <li><a class="nav-menu" style="color: #515356" href="daftarDonatur.html">DAFTAR DONATUR TAKJIL</a></li>
+                  <li><a class="nav-menu" style="color: #515356" href="pengumuman.html">PENGUMUMAN</a></li>
                </ul>
             </div>
          </div>
@@ -70,7 +71,7 @@
                            <h3><b>Jadwal Pengajian</b></h3>
                         </a>
                         <br>
-                        <div class="col-sm-8>
+                        <div class="col-sm-8">
                           <form class="form-horizontal form-label-left">
 
                             <div class="form-group">
@@ -100,23 +101,16 @@
                           <table id="datatableJadwalPengajian" class="table table-striped table-bordered">
                           <thead>
                             <tr>
-                              <th>Name</th>
-                              <th>Position</th>
-                              <th>Office</th>
-                              <th>Age</th>
-                              <th>Start date</th>
-                              <th>Salary</th>
+                              <th>Nama Acara</th>
+                              <th>Tanggal</th>
+                              <th>Keterangan</th>
                             </tr>
                           </thead>
                           <tbody>
                             <tr id="data1">
-                              <td>Tiger Nixon</td>
-                              <td>System Architect</td>
-                              <td>Edinburgh</td>
-                              <td>61</td>
-                              <td>2011/04/25</td>
-                              <td>$320,800</td>
-                            </tr>
+                              <td>Kajian Dhuha</td>
+                              <td>1 Desember 2016</td>
+                              <td>Pukul 08.00 - 10.00<br/>Materi Sakinah Bersamamu<br/>Penceramah Ust Aa Hadi</td>
                           </tbody>
                         </table>
                         </div>
