--- a/gentelella/production/ketua/laporanQurban.html
+++ b/gentelella/production/ketua/laporanQurban.html
@@ -53,8 +53,8 @@
                 <img src="../images/img.jpg" alt="..." class="img-circle profile_img">
               </div>
               <div class="profile_info">
-                <span>Welcome,</span>
-                <h2>John Doe</h2>
+                <span>Selamat Datang,</span>
+                <h2>Bapak M. Naim</h2>
               </div>
             </div>
             <!-- /menu profile quick info -->
@@ -96,11 +96,11 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="../images/img.jpg" alt="">John Doe
+                    <img src="../images/img.jpg" alt="">Bapak M. Naim
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
-                    <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                    <li><a href="../login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                   </ul>
                 </li>
               </ul>
@@ -159,7 +159,7 @@
                     <div>
                       <h4 style="font-weight: bold">A. Total Hewan Qurban : </h4>
                       <h4 id="totalBeras" style="text-indent: 50px">Total Sapi : 5 ekor</h4>
-                      <h4 id="totalUang"style="text-indent: 50px">Total Kambing : 20 ekor</h4>
+                      <h4 id="totalUang"style="text-indent: 50px">Total Kambing : 10 ekor</h4>
                     </div>
                     <div class="clearfix"></div>
                     <div>
@@ -169,22 +169,30 @@
                       <table id="datatablePemberiQurban" class="table table-striped table-bordered">
                         <thead>
                           <tr>
-                            <th>Name</th>
-                            <th>Position</th>
-                            <th>Office</th>
-                            <th>Age</th>
-                            <th>Start date</th>
-                            <th>Salary</th>
+                            <th>Nama</th>
+                            <th>No Telp</th>
+                            <th>Alamat</th>
+                            <th>Tanggal Pemberian</th>
+                            <th>Jenis Qurban</th>
+                            <th>Jumlah</th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr id="data1">
-                            <td>Tiger Nixon</td>
-                            <td>System Architect</td>
-                            <td>Edinburgh</td>
-                            <td>61</td>
-                            <td>2011/04/25</td>
-                            <td>$320,800</td>
+                            <td>Ahmad Nazri</td>
+                            <td>081928374819</td>
+                            <td>Jalan Keputih Gg. IC/1</td>
+                            <td>20 November 2016</td>
+                            <td>Sapi</td>
+                            <td>5</td>
+                          </tr>
+                          <tr id="data1">
+                            <td>Dahlan</td>
+                            <td>081729102938</td>
+                            <td>Jalan Keputih Gg. I/25</td>
+                            <td>23 November 2016</td>
+                            <td>Kambing</td>
+                            <td>10</td>
                           </tr>
                         </tbody>
                       </table>
@@ -197,22 +205,19 @@
                       <table id="datatablePenerimaQurban" class="table table-striped table-bordered">
                             <thead>
                               <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
+                                <th>Nama</th>
+                                <th>No Telp</th>
+                                <th>Alamat</th>
+                                <th>Tanggal Penerimaan</th>
                               </tr>
                             </thead>
                             <tbody>
                               <tr id="data1">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
+                                <td>Nur Aini</td>
+                                <td>089271638291</td>
+                                <td>Jalan Keputih Gg. Pasar No. 7</td>
+                                <td>26 November 2016</td>
+                                
                               </tr>
                             </tbody>
                           </table>
