--- a/gentelella/production/ketua/laporanRekapKeuangan.html
+++ b/gentelella/production/ketua/laporanRekapKeuangan.html
@@ -53,8 +53,8 @@
                 <img src="../images/img.jpg" alt="..." class="img-circle profile_img">
               </div>
               <div class="profile_info">
-                <span>Welcome,</span>
-                <h2>John Doe</h2>
+                <span>Selamat Datang,</span>
+                <h2>Bapak M. Naim</h2>
               </div>
             </div>
             <!-- /menu profile quick info -->
@@ -96,11 +96,11 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="../images/img.jpg" alt="">John Doe
+                    <img src="../images/img.jpg" alt="">Bapak M. Naim
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
-                    <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                    <li><a href="../login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                   </ul>
                 </li>
               </ul>
@@ -153,29 +153,23 @@
                       <h4 style="font-weight: bold">A. Pemasukan : </h4>
                       <div class="clearfix"></div>
                       <br>
-                      <table id="datatablePengeluaran" class="table table-striped table-bordered">
+                      <table id="datatablePemasukan" class="table table-striped table-bordered">
                         <thead>
                           <tr>
-                            <th>Name</th>
-                            <th>Position</th>
-                            <th>Office</th>
-                            <th>Age</th>
-                            <th>Start date</th>
-                            <th>Salary</th>
+                            <th>Tanggal</th>
+                            <th>Keterangan</th>
+                            <th>Jumlah</th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr id="data1">
-                            <td>Tiger Nixon</td>
-                            <td>System Architect</td>
-                            <td>Edinburgh</td>
-                            <td>61</td>
-                            <td>2011/04/25</td>
-                            <td>$320,800</td>
+                            <td>11 November 2016</td>
+                            <td>Kotak Jumat</td>
+                            <td>Rp. 3.492.000</td>
                           </tr>
                           <tr>
-                            <td colspan="5">Total</td>
-                            <td>$320,800</td>
+                            <td colspan="2">Total</td>
+                            <td>Rp. 3.492.000</td>
                           </tr>
                         </tbody>
                       </table>
@@ -189,26 +183,25 @@
                       <table id="datatablePemasukan" class="table table-striped table-bordered">
                         <thead>
                           <tr>
-                            <th>Name</th>
-                            <th>Position</th>
-                            <th>Office</th>
-                            <th>Age</th>
-                            <th>Start date</th>
-                            <th>Salary</th>
+                            <th>Tanggal</th>
+                            <th>Keterangan</th>
+                            <th>Jumlah</th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr id="data1">
-                            <td>Tiger Nixon</td>
-                            <td>System Architect</td>
-                            <td>Edinburgh</td>
-                            <td>61</td>
-                            <td>2011/04/25</td>
-                            <td>$320,800</td>
+                            <td>15 November 2016</td>
+                            <td>Konsumsi Pengajian</td>
+                            <td>Rp. 300.000</td>
+                          </tr>
+                          <tr id="data2">
+                            <td>3 November 2016</td>
+                            <td>Listrik</td>
+                            <td>Rp. 120.000</td>
                           </tr>
                           <tr>
-                            <td colspan="5">Total</td>
-                            <td>$320,800</td>
+                            <td colspan="2">Total</td>
+                            <td>Rp. 420.000</td>
                           </tr>
                         </tbody>
                       </table>
@@ -219,20 +212,21 @@
                       <div class="clearfix"></div>
                       <br>
                       <table style="text-indent: 50px">
+                      <tr>
+                          <td style="font-size: 16px" colspan="" rowspan="" headers="">Pemasukkan</td>
+                          <td style="font-size: 16px" colspan="" rowspan="" headers="">&nbsp;:&nbsp;</td>
+                          <td style="font-size: 16px" colspan="" rowspan="" headers="">Rp. 3.492.000</td>
+                        </tr>
                         <tr>
                           <td style="font-size: 16px" colspan="" rowspan="" headers="">Pengeluaran</td>
                           <td style="font-size: 16px" colspan="" rowspan="" headers="">&nbsp;:&nbsp;</td>
-                          <td style="font-size: 16px" colspan="" rowspan="" headers="">Rp. 5.000.000</td>
+                          <td style="font-size: 16px" colspan="" rowspan="" headers="">Rp. 420.000</td>
                         </tr>
-                        <tr>
-                          <td style="font-size: 16px" colspan="" rowspan="" headers="">Pemasukkan</td>
-                          <td style="font-size: 16px" colspan="" rowspan="" headers="">&nbsp;:&nbsp;</td>
-                          <td style="font-size: 16px" colspan="" rowspan="" headers="">Rp. 15.000.000</td>
-                        </tr>
+                        
                          <tr>
                           <td style="font-size: 16px; border-top: 1px solid; font-weight: bold" colspan="" rowspan="" headers="">Kas</td>
                           <td style="font-size: 16px; border-top: 1px solid; font-weight: bold" colspan="" rowspan="" headers="">&nbsp;:&nbsp;</td>
-                          <td style="font-size: 16px; border-top: 1px solid; font-weight: bold" colspan="" rowspan="" headers="">Rp. 10.000.000</td>
+                          <td style="font-size: 16px; border-top: 1px solid; font-weight: bold" colspan="" rowspan="" headers="">Rp. 3.072.000</td>
                         </tr>
                       </table>
                       <div class="clearfix"></div>
