--- a/gentelella/production/ketua/laporanZakat.html
+++ b/gentelella/production/ketua/laporanZakat.html
@@ -53,8 +53,8 @@
                 <img src="../images/img.jpg" alt="..." class="img-circle profile_img">
               </div>
               <div class="profile_info">
-                <span>Welcome,</span>
-                <h2>John Doe</h2>
+                <span>Selamat Datang,</span>
+                <h2>Bapak M. Naim</h2>
               </div>
             </div>
             <!-- /menu profile quick info -->
@@ -96,11 +96,11 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="../images/img.jpg" alt="">John Doe
+                    <img src="../images/img.jpg" alt="">Bapak M. Naim
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
-                    <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                    <li><a href="../login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                   </ul>
                 </li>
               </ul>
@@ -158,8 +158,8 @@
                     <br />
                     <div>
                       <h4 style="font-weight: bold">A. Total Penerimaan Zakat : </h4>
-                      <h4 id="totalBeras" style="text-indent: 50px">Total Beras : 100 Kg</h4>
-                      <h4 id="totalUang"style="text-indent: 50px">Total Uang : Rp. 25.000.000</h4>
+                      <h4 id="totalBeras" style="text-indent: 50px">Total Beras : 10 kg</h4>
+                      <h4 id="totalUang"style="text-indent: 50px">Total Uang : Rp. 10.000.000</h4>
                     </div>
                     <div class="clearfix"></div>
                     <div>
@@ -169,22 +169,30 @@
                       <table id="datatablePemberiZakat" class="table table-striped table-bordered">
                             <thead>
                               <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
+                                <th>Nama</th>
+                                <th>Alamat</th>
+                                <th>No Telp</th>
+                                <th>Tanggal Pemberian</th>
+                                <th>Jenis Zakat</th>
+                                <th>Jumlah</th>
                               </tr>
                             </thead>
                             <tbody>
                               <tr id="data1">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
+                                <td>Siti</td>
+                                <td>Jalan Keputih Gg. II/12</td>
+                                <td>081273810281</td>
+                                <td>20 November 2016</td>
+                                <td>Beras</td>
+                                <td>10 kg</td>
+                              </tr>
+                              <tr id="data1">
+                                <td>M. Mansyur</td>
+                                <td>Jalan Keputih Gg. I/9</td>
+                                <td>081273800821</td>
+                                <td>21 November 2016</td>
+                                <td>Uang</td>
+                                <td>Rp. 10.000.000</td>
                               </tr>
                             </tbody>
                           </table>
@@ -197,22 +205,24 @@
                       <table id="datatablePenerimaZakat" class="table table-striped table-bordered">
                             <thead>
                               <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
+                                <th>Nama</th>
+                                <th>Alamat</th>
+                                <th>No Telp</th>
+                                <th>Jumlah Anggota Keluarga</th>
+                                <th>Tanggal Penerimaan</th>
+                                <th>Jenis</th>
+                                <th>Jumlah</th>
                               </tr>
                             </thead>
                             <tbody>
                               <tr id="data1">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
+                                <td>Umi</td>
+                                <td>Jalan Keputih Gg. II/24A</td>
+                                <td>085737491038</td>
+                                <td>4</td>
+                                <td>25 November 2016</td>
+                                <td>Beras</td>
+                                <td>3 kg</td>
                               </tr>
                             </tbody>
                           </table>
