--- a/gentelella/production/ketua/mengelolaPengurus.html
+++ b/gentelella/production/ketua/mengelolaPengurus.html
@@ -54,8 +54,8 @@
                 <img src="../images/img.jpg" alt="..." class="img-circle profile_img">
               </div>
               <div class="profile_info">
-                <span>Welcome,</span>
-                <h2>John Doe</h2>
+                <span>Selamat Datang,</span>
+                <h2>Bapak M. Naim</h2>
               </div>
             </div>
             <!-- /menu profile quick info -->
@@ -99,11 +99,11 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="../images/img.jpg" alt="">John Doe
+                    <img src="../images/img.jpg" alt="">Bapak M. Naim
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
-                    <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                    <li><a href="../login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                   </ul>
                 </li>
 
@@ -159,40 +159,28 @@
                         <div role="tabpanel" class="tab-pane fade active in" id="tambahPengurus" aria-labelledby="home-tab">
                           <form id="demo-form2" data-parsley-validate class="form-horizontal form-label-left">
                             <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">First Name <span class="required">*</span>
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Jabatan <span class="required">*</span>
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <input type="text" id="first-name" required="required" class="form-control col-md-7 col-xs-12">
                               </div>
                             </div>
                             <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Last Name <span class="required">*</span>
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Nama <span class="required">*</span>
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <input type="text" id="last-name" name="last-name" required="required" class="form-control col-md-7 col-xs-12">
                               </div>
                             </div>
                             <div class="form-group">
-                              <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Middle Name / Initial</label>
+                              <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">No Telp </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name">
                               </div>
                             </div>
+                            
                             <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Gender</label>
-                              <div class="col-md-6 col-sm-6 col-xs-12">
-                                <div id="gender" class="btn-group" data-toggle="buttons">
-                                  <label class="btn btn-default" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                                    <input type="radio" name="gender" value="male"> &nbsp; Male &nbsp;
-                                  </label>
-                                  <label class="btn btn-primary" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                                    <input type="radio" name="gender" value="female"> Female
-                                  </label>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Date Of Birth <span class="required">*</span>
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Alamat <span class="required">*</span>
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" required="required" type="text">
@@ -212,59 +200,55 @@
                           <table id="datatableEdit" class="table table-striped table-bordered">
                             <thead>
                               <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                                <th>Action</th>
+                                <th>Jabatan</th>
+                                <th>Nama</th>
+                                <th>No Telp</th>
+                                <th>Alamat</th>
+                                <th>Aksi</th>
                               </tr>
                             </thead>
                             <tbody>
                               <tr id="data1">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
+                                <td>Ketua</td>
+                                <td>M. Naim</td>
+                                <td>089738271638</td>
+                                <td>Jalan Keputih Gg. II/15 </td>
                                 <td><a href="updatePengurusMasjid.html"><button class="btn btn-info btn-sm" type="">Edit</button></a></td>
                               </tr>
-                              
-                            </tbody>
+                              <tr id="data2">
+                                <td>Sekretaris</td>
+                                <td>M. Irfak</td>
+                                <td>081237182937</td>
+                                <td>Jalan Keputih Gg. I/10A</td>
+                                <td><a href="updatePengurusMasjid.html"><button class="btn btn-info btn-sm" type="">Edit</button></a></td>
+                              </tr>
+                           </tbody>
                           </table>
                         </div>
                         <div role="tabpanel" class="tab-pane fade" id="hapusPengurus" aria-labelledby="profile-tab">
                           <table id="datatableDelete" class="table table-striped table-bordered">
                             <thead>
                               <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                                <th>Action</th>
+                                <th>Jabatan</th>
+                                <th>Nama</th>
+                                <th>No Telp</th>
+                                <th>Alamat</th>
+                                <th>Aksi</th>
                               </tr>
                             </thead>
                             <tbody>
                               <tr id="data1">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
+                                <td>Ketua</td>
+                                <td>M. Naim</td>
+                                <td>089738271638</td>
+                                <td>Jalan Keputih Gg. II/15</td>
                                 <td><button class="delete-but btn btn-danger btn-sm" type="">Delete</button></td>
                               </tr>
                                <tr id="data2">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
+                                <td>Sekretaris</td>
+                                <td>M. Irfak</td>
+                                <td>081237182937</td>
+                                <td>Jalan Keputih Gg. I/10A</td>
                                 <td><button class="delete-but btn btn-danger btn-sm" type="">Delete</button></td>
                               </tr>
                             </tbody>
