--- a/gentelella/production/ketua/updateJadwalImam.html
+++ b/gentelella/production/ketua/updateJadwalImam.html
@@ -116,7 +116,7 @@
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>Update Pengurus Masjid, M. Naim (Ketua)</h2>
+                    <h2>Update Jadwal Imam, M. Hanif</h2>
                     <ul class="nav navbar-right panel_toolbox">
                       <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                       </li>
@@ -129,31 +129,36 @@
                     <br />
                     <form id="demo-form2" data-parsley-validate class="form-horizontal form-label-left">
                         <div class="form-group">
-                          <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Jabatan <span class="required">*</span>
+                          <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Tanggal <span class="required">*</span>
                           </label>
                           <div class="col-md-6 col-sm-6 col-xs-12">
                             <input type="text" id="first-name" required="required" class="form-control col-md-7 col-xs-12">
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Nama <span class="required">*</span>
+                          <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Waktu <span class="required">*</span>
                           </label>
                           <div class="col-md-6 col-sm-6 col-xs-12">
                             <input type="text" id="last-name" name="last-name" required="required" class="form-control col-md-7 col-xs-12">
                           </div>
                         </div>
                         <div class="form-group">
-                          <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">No Telp</label>
+                          <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Acara </label>
                           <div class="col-md-6 col-sm-6 col-xs-12">
                             <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name">
                           </div>
                         </div>
                         
                         <div class="form-group">
-                          <label class="control-label col-md-3 col-sm-3 col-xs-12">Alamat <span class="required">*</span>
+                          <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Imam<span class="required">*</span>
                           </label>
-                          <div class="col-md-6 col-sm-6 col-xs-12">
-                            <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" required="required" type="text">
+                          <div class="col-md-8 col-sm-8 col-xs-8">
+                           <!--  <input type="text" id="first-name" required="required" class="form-control col-md-7 col-xs-12"> -->
+                          <select id="dateDonation">
+                              <option value="">Pilih Nama Imam</option>
+                              <option value="M. Hanif">M. Hanif</option>
+                              <option value="Hamrizal">Hamrizal</option>
+                          </select>
                           </div>
                         </div>
                         <div class="ln_solid"></div>
