--- a/gentelella/production/sekretaris/mengelolaPemberiZakat.html
+++ b/gentelella/production/sekretaris/mengelolaPemberiZakat.html
@@ -54,8 +54,8 @@
                 <img src="../images/img.jpg" alt="..." class="img-circle profile_img">
               </div>
               <div class="profile_info">
-                <span>Welcome,</span>
-                <h2>John Doe</h2>
+                <span>Selamat Datang,</span>
+                <h2>Bapak Bapak M. Irfak</h2>
               </div>
             </div>
             <!-- /menu profile quick info -->
@@ -99,11 +99,11 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="../images/img.jpg" alt="">John Doe
+                    <img src="../images/img.jpg" alt="">Bapak M. Irfak
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
-                    <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                    <li><a href="../login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                   </ul>
                 </li>
 
@@ -159,40 +159,42 @@
                         <div role="tabpanel" class="tab-pane fade active in" id="tambahPemberiZakat" aria-labelledby="home-tab">
                           <form id="demo-form2" data-parsley-validate class="form-horizontal form-label-left">
                             <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">First Name <span class="required">*</span>
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Nama <span class="required">*</span>
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <input type="text" id="first-name" required="required" class="form-control col-md-7 col-xs-12">
                               </div>
                             </div>
                             <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Last Name <span class="required">*</span>
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Alamat <span class="required">*</span>
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <input type="text" id="last-name" name="last-name" required="required" class="form-control col-md-7 col-xs-12">
                               </div>
                             </div>
                             <div class="form-group">
-                              <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Middle Name / Initial</label>
+                              <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">No Telp</label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name">
                               </div>
                             </div>
+                            
                             <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Gender</label>
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Tanggal Pemberian <span class="required">*</span>
+                              </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
-                                <div id="gender" class="btn-group" data-toggle="buttons">
-                                  <label class="btn btn-default" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                                    <input type="radio" name="gender" value="male"> &nbsp; Male &nbsp;
-                                  </label>
-                                  <label class="btn btn-primary" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                                    <input type="radio" name="gender" value="female"> Female
-                                  </label>
-                                </div>
+                                <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" required="required" type="text">
+                              </div>
+                            </div>
+                             <div class="form-group">
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Jenis Zakat <span class="required">*</span>
+                              </label>
+                              <div class="col-md-6 col-sm-6 col-xs-12">
+                                <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" required="required" type="text">
                               </div>
                             </div>
                             <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Date Of Birth <span class="required">*</span>
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Jumlah <span class="required">*</span>
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" required="required" type="text">
@@ -212,23 +214,32 @@
                           <table id="datatableEdit" class="table table-striped table-bordered">
                             <thead>
                               <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                                <th>Action</th>
+                                <th>Nama</th>
+                                <th>Alamat</th>
+                                <th>No Telp</th>
+                                <th>Tanggal Pemberian</th>
+                                <th>Jenis Zakat</th>
+                                <th>Jumlah</th>
+                                <th>Aksi</th>
                               </tr>
                             </thead>
                             <tbody>
                               <tr id="data1">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
+                                <td>Siti</td>
+                                <td>Jalan Keputih Gg. II/12</td>
+                                <td>081273810281</td>
+                                <td>20 November 2016</td>
+                                <td>Beras</td>
+                                <td>10 kg</td>
+                                <td><a href="updatePemberiZakat.html"><button class="btn btn-info btn-sm" type="">Edit</button></a></td>
+                              </tr>
+                              <tr id="data2">
+                                <td>M. Mansyur</td>
+                                <td>Jalan Keputih Gg. I/9</td>
+                                <td>081273800821</td>
+                                <td>21 November 2016</td>
+                                <td>Uang</td>
+                                <td>Rp. 10.000.000</td>
                                 <td><a href="updatePemberiZakat.html"><button class="btn btn-info btn-sm" type="">Edit</button></a></td>
                               </tr>
                               
@@ -239,32 +250,32 @@
                           <table id="datatableDelete" class="table table-striped table-bordered">
                             <thead>
                               <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                                <th>Action</th>
+                                <th>Nama</th>
+                                <th>Alamat</th>
+                                <th>No Telp</th>
+                                <th>Tanggal Pemberian</th>
+                                <th>Jenis Zakat</th>
+                                <th>Jumlah</th>
+                                <th>Aksi</th>
                               </tr>
                             </thead>
                             <tbody>
                               <tr id="data1">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
+                                <td>Siti</td>
+                                <td>Jalan Keputih Gg. II/12</td>
+                                <td>081273810281</td>
+                                <td>20 November 2016</td>
+                                <td>Beras</td>
+                                <td>10 kg</td>
                                 <td><button class="delete-but btn btn-danger btn-sm" type="">Delete</button></td>
                               </tr>
                                <tr id="data2">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
+                                <td>M. Mansyur</td>
+                                <td>Jalan Keputih Gg. I/9</td>
+                                <td>081273800821</td>
+                                <td>21 November 2016</td>
+                                <td>Uang</td>
+                                <td>Rp. 10.000.000</td>
                                 <td><button class="delete-but btn btn-danger btn-sm" type="">Delete</button></td>
                               </tr>
                             </tbody>
