--- a/gentelella/production/sekretaris/mengelolaPengumuman.html
+++ b/gentelella/production/sekretaris/mengelolaPengumuman.html
@@ -54,8 +54,8 @@
                 <img src="../images/img.jpg" alt="..." class="img-circle profile_img">
               </div>
               <div class="profile_info">
-                <span>Welcome,</span>
-                <h2>John Doe</h2>
+                <span>Selamat Datang,</span>
+                <h2>Bapak M. Irfak</h2>
               </div>
             </div>
             <!-- /menu profile quick info -->
@@ -99,11 +99,11 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="../images/img.jpg" alt="">John Doe
+                    <img src="../images/img.jpg" alt="">Bapak M. Irfak
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
-                    <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                    <li><a href="../login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                   </ul>
                 </li>
 
@@ -159,43 +159,23 @@
                         <div role="tabpanel" class="tab-pane fade active in" id="tambahPengumuman" aria-labelledby="home-tab">
                           <form id="demo-form2" data-parsley-validate class="form-horizontal form-label-left">
                             <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">First Name <span class="required">*</span>
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Tanggal <span class="required">*</span>
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <input type="text" id="first-name" required="required" class="form-control col-md-7 col-xs-12">
                               </div>
                             </div>
                             <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Last Name <span class="required">*</span>
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Judul <span class="required">*</span>
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <input type="text" id="last-name" name="last-name" required="required" class="form-control col-md-7 col-xs-12">
                               </div>
                             </div>
                             <div class="form-group">
-                              <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Middle Name / Initial</label>
+                              <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Isi</label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name">
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Gender</label>
-                              <div class="col-md-6 col-sm-6 col-xs-12">
-                                <div id="gender" class="btn-group" data-toggle="buttons">
-                                  <label class="btn btn-default" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                                    <input type="radio" name="gender" value="male"> &nbsp; Male &nbsp;
-                                  </label>
-                                  <label class="btn btn-primary" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                                    <input type="radio" name="gender" value="female"> Female
-                                  </label>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Date Of Birth <span class="required">*</span>
-                              </label>
-                              <div class="col-md-6 col-sm-6 col-xs-12">
-                                <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" required="required" type="text">
                               </div>
                             </div>
                             <div class="ln_solid"></div>
@@ -212,23 +192,17 @@
                           <table id="datatableEdit" class="table table-striped table-bordered">
                             <thead>
                               <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                                <th>Action</th>
+                                <th>Tanggal</th>
+                                <th>Judul</th>
+                                <th>Isi</th>
+                                <th>Aksi</th>
                               </tr>
                             </thead>
                             <tbody>
                               <tr id="data1">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
+                                <td>10 November 2016</td>
+                                <td>Ditemukan Barang</td>
+                                <td>Ditemukan tas ransel warna merah tertinggal hari ini pukul 14.00 di Masjid Baitul Mutaqqin. Bagi yang merasa kehilangan bisa menghubungi Bapak Hadi (085726391028) atau langsung ke alamat Jalan Keputih Gg. II/15. Terimakasih.</td>
                                 <td><a href="updatePengumuman.html"><button class="btn btn-info btn-sm" type="">Edit</button></a></td>
                               </tr>
                               
@@ -239,32 +213,17 @@
                           <table id="datatableDelete" class="table table-striped table-bordered">
                             <thead>
                               <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                                <th>Action</th>
+                                <th>Tanggal</th>
+                                <th>Judul</th>
+                                <th>Isi</th>
+                                <th>Aksi</th>
                               </tr>
                             </thead>
                             <tbody>
                               <tr id="data1">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
-                                <td><button class="delete-but btn btn-danger btn-sm" type="">Delete</button></td>
-                              </tr>
-                               <tr id="data2">
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
+                                <td>10 November 2016</td>
+                                <td>Ditemukan Barang</td>
+                                <td>Ditemukan tas ransel warna merah tertinggal hari ini pukul 14.00 di Masjid Baitul Mutaqqin. Bagi yang merasa kehilangan bisa menghubungi Bapak Hadi (085726391028) atau langsung ke alamat Jalan Keputih Gg. II/15. Terimakasih.</td>
                                 <td><button class="delete-but btn btn-danger btn-sm" type="">Delete</button></td>
                               </tr>
                             </tbody>
