--- a/gentelella/production/ketua/updatePengurusMasjid.html
+++ b/gentelella/production/ketua/updatePengurusMasjid.html
@@ -133,7 +133,7 @@
                           </label>
                           <div class="col-md-6 col-sm-6 col-xs-12">
                             <select class="form-control
-                                 col-md-7 col-xs-12" name="jabatanPengurus"><option value="Sekeretaris">Sekretaris</option>
+                                 col-md-7 col-xs-12" name="jabatanPengurus"><option value="Sekertaris">Sekertaris</option>
                                  <option value="Ketua">Ketua</option>
                                  <option value="Bendahara">Bendahara</option>
                                 </select>
