--- a/gentelella/production/sekretaris/sidebar-sekretaris.html
+++ b/gentelella/production/sekretaris/sidebar-sekretaris.html
@@ -2,12 +2,13 @@
                 <h3>Sekretaris</h3>
                 <ul class="nav side-menu">
                   <li><a href="donaturTakjil.html"><i class="fa fa-cutlery"></i>Donatur Takjil</a></li>
-                  <li><a href="mengelolaPengumuman.html"><i class="fa fa-info"></i>Mengelola Pengumuman</a>
-                  <li><a href="mengelolaPenerimaZakat.html"><i class="fa fa-group"></i>Mengelola Penerima Zakat</a>
-                  <li><a href="mengelolaPemberiZakat.html"><i class="fa fa-user"></i>Mengelola Pemberi Zakat</a>
-                  <li><a href="mengelolaPenerimaQurban.html" ><i class="fa fa-group"></i>Mengelola Penerima Qurban</a>
-                  <li><a href="mengelolaPemberiQurban.html"><i class="fa fa-user"></i>Mengelola Pemberi Qurban</a>
-                  <li><a href="mengelolaInventaris.html"><i class="fa fa-wrench"></i>Mengelola Inventaris</a>
-                  <li><a href="mengelolaJadwalPengajian.html"><i class="fa fa-calendar"></i>Mengelola Jadwal Pengajian</a>
-                  </li>
+                  <li><a href="mengelolaPengumuman.html"><i class="fa fa-info"></i>Mengelola Pengumuman</a></li>
+                  <li><a href="mengelolaPenerimaZakat.html"><i class="fa fa-group"></i>Mengelola Penerima Zakat</a></li>
+                  <li><a href="mengelolaPemberiZakat.html"><i class="fa fa-user"></i>Mengelola Pemberi Zakat</a></li>
+                  <li><a href="mengelolaPenerimaQurban.html" ><i class="fa fa-group"></i>Mengelola Penerima Qurban</a></li>
+                  <li><a href="mengelolaPemberiQurban.html"><i class="fa fa-user"></i>Mengelola Pemberi Qurban</a></li>
+                  <li><a href="mengelolaInventaris.html"><i class="fa fa-wrench"></i>Mengelola Inventaris</a></li>
+                  <li><a href="mengelolaJadwalPengajian.html"><i class="fa fa-calendar"></i>Mengelola Jadwal Pengajian</a></li>
+                </ul>
+
               </div>
