Betulin tampilam error

--- a/gentelella/production/ketua/updateJadwalImam.html
+++ b/gentelella/production/ketua/updateJadwalImam.html
@@ -143,7 +143,7 @@
                           </div>
                         </div>
                         <div class="form-group">
-                          <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Acara </label>
+                          <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Keterangan Sholat </label>
                           <div class="col-md-6 col-sm-6 col-xs-12">
                             <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name">
                           </div>
